# hf-langgraph-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: agent.py  llm.py  main.py  prompts.py  state.py  trace.py
app/tools/: doc_search.py  duckdb_tool.py  utils.py
data/docs/: architecture.md  design-decisions.md  example.md  tooling.md
hf_langgraph_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_tools.py
